--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npx mocha --parallel --exit aula3/test/",
     "test:dev": "npx mocha aula3/test/ -w",
-    "test:cov": "npx nyc --reporters=html,text npm test"
+    "test:cov": "npx nyc --reporter=html npm test"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://bitbucket.org/BruAndreo/js-expert#readme",
   "dependencies": {
     "chai": "^4.3.0",
+    "lokijs": "^1.5.11",
     "mocha": "^8.3.0",
     "nyc": "^15.1.0",
     "sinon": "^9.2.4"
